[gd_scene load_steps=6 format=2]

[ext_resource path="res://InventoryUI.png" type="Texture2D" id=1]
[ext_resource path="res://InventoryUI.gd" type="Script" id=2]
[ext_resource path="res://DroidSerif-WmoY.ttf" type="FontFile" id=3]
[ext_resource path="res://white.png" type="Texture2D" id=5]

[sub_resource type="FontFile" id=1]
size = 40
font_data = ExtResource( 3 )

[node name="InventoryUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2( 969, 549 )
z_index = 1
texture = ExtResource( 1 )

[node name="Buttons" type="Control" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Hotbar" type="Control" parent="Buttons"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2( -486, -101 )

[node name="HS1" type="Button" parent="Buttons/Hotbar"]
offset_left = 580.0
offset_top = 124.0
offset_right = 653.0
offset_bottom = 197.0

[node name="HS2" type="Button" parent="Buttons/Hotbar"]
offset_left = 655.0
offset_top = 124.0
offset_right = 728.0
offset_bottom = 197.0

[node name="HS3" type="Button" parent="Buttons/Hotbar"]
offset_left = 725.0
offset_top = 124.0
offset_right = 798.0
offset_bottom = 197.0

[node name="HS4" type="Button" parent="Buttons/Hotbar"]
offset_left = 798.0
offset_top = 124.0
offset_right = 871.0
offset_bottom = 197.0

[node name="HS5" type="Button" parent="Buttons/Hotbar"]
offset_left = 874.0
offset_top = 123.0
offset_right = 947.0
offset_bottom = 196.0

[node name="HS6" type="Button" parent="Buttons/Hotbar"]
offset_left = 950.0
offset_top = 124.0
offset_right = 1023.0
offset_bottom = 197.0

[node name="HS7" type="Button" parent="Buttons/Hotbar"]
offset_left = 1018.0
offset_top = 123.0
offset_right = 1091.0
offset_bottom = 196.0

[node name="HS8" type="Button" parent="Buttons/Hotbar"]
offset_left = 1092.0
offset_top = 123.0
offset_right = 1165.0
offset_bottom = 196.0

[node name="HS9" type="Button" parent="Buttons/Hotbar"]
offset_left = 1167.0
offset_top = 124.0
offset_right = 1240.0
offset_bottom = 197.0

[node name="HS10" type="Button" parent="Buttons/Hotbar"]
offset_left = 1238.0
offset_top = 125.0
offset_right = 1311.0
offset_bottom = 198.0

[node name="Inventory" type="Control" parent="Buttons"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Equipment" type="Control" parent="Buttons"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Auto" type="Control" parent="Buttons"]
offset_left = 43.0
offset_top = 18.0
offset_right = 83.0
offset_bottom = 58.0

[node name="AS1" type="Button" parent="Buttons/Auto"]
offset_left = 504.0
offset_top = 845.0
offset_right = 559.0
offset_bottom = 905.0
icon = ExtResource( 5 )

[node name="Button" type="Button" parent="."]
offset_left = 145.0
offset_top = 100.0
offset_right = 323.0
offset_bottom = 201.0
theme_override_fonts/font = SubResource( 1 )
text = "Back"

[connection signal="pressed" from="Buttons/Hotbar/HS1" to="." method="_HS1"]
[connection signal="pressed" from="Buttons/Hotbar/HS2" to="." method="_HS2"]
[connection signal="pressed" from="Buttons/Hotbar/HS3" to="." method="_HS3"]
[connection signal="pressed" from="Button" to="." method="_on_back"]
